https://test.kuali.org/jira/browse/KRAFDBCK-2787
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6739 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-actions.html
+++ b/kra-ip-dev/1-prop-actions.html
@@ -83,9 +83,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </span></dt>
         <dt class="licurrent" ><span class="tabright tabcurrent">
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institutional Proposal Actions">
-          </span></dt><dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','1-prop-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
-        </span>
+          </span></dt>
+        <dt><span class="tabright">
+          <input name="Submit" type="submit" onClick="MM_goToURL('parent','1-prop-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+          </span>
       </dl>
     </div>
   </div>
@@ -107,7 +108,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
       <td><div  align="center">
           <div id="workarea">
-<table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
+            <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
               <tr>
                 <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Data Validation</td>
                 <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A01" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F01" ></a></span></td>
@@ -177,6 +178,93 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tbody>
               </table>
             </div>
+            <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+              <tr>
+               <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Funded Awards</td>
+                <td class="tabtable2-mid"><a href="#" id="A125" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F125" ></a></td>
+                <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
+              </tr>
+            </table>
+            <div class="tab-container" align="center" id="G125" style="display: none;">
+              <div class="h2-container"> <span class="subhead-left">
+                <h2><span class="tabtable1-left-colspan">Funded Awards</span></h2>
+                </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              <table  cellpadding="0" cellspacing="0"  summary="">
+              
+                <tbody>
+                  <tr>
+                    <th>Award ID</th>
+                    <th>Award Version</th>
+                    <th>Proposal Version</th>
+                    <th>Account ID</th>
+                    <th>Actions</th>
+                  </tr>
+                  <tr>
+                    <td><div align="center">000226-001</div></td>
+                    <td><div align="center">1</div></td>
+                    <td><div align="center">5</div></td>
+                    <td><div align="center">613734</div></td>
+                    <td><div align=center>
+                        <label>
+                          <input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                        </label>
+                      </div></td>
+                  </tr>
+                  <tr>
+                    <td><div align="center">000226-001</div></td>
+                    <td><div align="center">3</div></td>
+                    <td><div align="center">2</div></td>
+                    <td><div align="center">613234</div></td>
+                    <td><div align=center>
+                        <label>
+                          <input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                        </label>
+                      </div></td>
+                  </tr>
+                  <tr>
+                    <td><div align="center">000226-001</div></td>
+                    <td><div align="center">2</div></td>
+                    <td><div align="center">3</div></td>
+                    <td><div align="center">613374</div></td>
+                    <td><div align=center>
+                        <label>
+                          <input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                        </label>
+                      </div></td>
+                  </tr>
+                  <tr>
+                    <td><div align="center">000226-001</div></td>
+                    <td><div align="center">1</div></td>
+                    <td><div align="center">1</div></td>
+                    <td><div align="center">613776</div></td>
+                    <td><div align=center>
+                        <label>
+                          <input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                        </label>
+                      </div></td>
+                  </tr>
+                  <tr>
+                    <td><div align="center">000226-001</div></td>
+                    <td><div align="center">1</div></td>
+                    <td><div align="center">2</div></td>
+                    <td><div align="center">613902</div></td>
+                    <td><div align=center>
+                        <label>
+                          <input name="checkbox" type="checkbox" class="nobord" id="checkbox">
+                        </label>
+                      </div></td>
+                  </tr>
+                  <tr>
+                    <td colspan="4" class="infoline"><div align="center"><img src="../images/tinybutton-unlockselected.gif" alt="dsdfhg" width="88" height="15" vspace="5"></div></td>
+                    <td class="infoline"><div align="center">Select (<a href="#">all</a> | <a href="#">none</a>)</div></td>
+                  </tr>
+                </tbody>
+                <tbody id="G2" style="display: none;">
+                </tbody>
+              </table>
+              <br>
+              <br>
+            </div>
             <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
               <tr>
                 <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print </td>
@@ -197,23 +285,23 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <td  ><div class="floaters" align="center" style="text-align:center;"><img src="../images/tinybutton-viewnotice.gif" alt="dsdfhg" width="69" height="15" vspace="5" align="absmiddle"></div></td>
                     <td  ><div class="floaters"  align="center" style="text-align:center;">
-                      <select name="select" id="select">
-                        <option selected>Godfrey, Alberta D</option>
-                        <option> Mays, Lyle</option>
-                        <option>Coltrane, John</option>
-                      </select>
-                    <span class="infoline" style="text-align:center;"><br>
-                    <img src="../images/tinybutton-viewreport.gif" alt="view report" width="69" height="15" vspace="5" align="absmiddle" onClick="MM_openBrWindow('1-prop-cp1.html','','scrollbars=yes,resizable=yes,width=1000,height=640')"></span></div></td>
+                        <select name="select" id="select">
+                          <option selected>Godfrey, Alberta D</option>
+                          <option> Mays, Lyle</option>
+                          <option>Coltrane, John</option>
+                        </select>
+                        <span class="infoline" style="text-align:center;"><br>
+                        <img src="../images/tinybutton-viewreport.gif" alt="view report" width="69" height="15" vspace="5" align="absmiddle" onClick="MM_openBrWindow('1-prop-cp1.html','','scrollbars=yes,resizable=yes,width=1000,height=640')"></span></div></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-           <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
-            <tr>
-              <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
-              <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
-            </tr>
-          </table>
+            <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+              <tr>
+                <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
+                <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
+              </tr>
+            </table>
           </div>
           <div align="right"><br>
             * required </div>
