https://test.kuali.org/jira/browse/KRAFDBCK-2786
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6740 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -378,6 +378,21 @@ function addLoadEvent(func) {
                   </select></td>
               </tr>
               <tr>
+                <th><div align=right>Sponsor Deadline Date:</div></th>
+                <td align=left valign=middle><input name="startDate5" type=text onchange="dataChanged()" value="" size="12" maxlength=10 />
+                  <input type="image" class="nobord" src="../images/cal.gif" alt="inquiry"></td>
+                <th><div align=right>Sponsor Deadline Type:</div></th>
+                <td align=left valign=middle><select style="width:200px;" name="select4" onchange="dataChanged()">
+                    <option selected>select</option>
+                    <option>&lt;value?&gt;</option>
+                    <option>&lt;value?&gt;</option>
+                    <option>&lt;value?&gt;</option>
+                    <option>&lt;value?&gt;</option>
+                    <option>&lt;value?&gt;</option>
+                    <option>&lt;value?&gt;</option>
+                  </select></td>
+              </tr>
+              <tr>
                 <th><div align=right>Notice of Opportunity:</div></th>
                 <td align=left valign=middle><select style="width:200px;" name="select5" onchange="dataChanged()">
                     <option selected>select</option>
