https://test.kuali.org/jira/browse/KRAFDBCK-2786
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6741 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -384,12 +384,9 @@ function addLoadEvent(func) {
                 <th><div align=right>Sponsor Deadline Type:</div></th>
                 <td align=left valign=middle><select style="width:200px;" name="select4" onchange="dataChanged()">
                     <option selected>select</option>
-                    <option>&lt;value?&gt;</option>
-                    <option>&lt;value?&gt;</option>
-                    <option>&lt;value?&gt;</option>
-                    <option>&lt;value?&gt;</option>
-                    <option>&lt;value?&gt;</option>
-                    <option>&lt;value?&gt;</option>
+                    <option>postmark </option>
+                    <option>target </option>
+                    <option>receipt</option>
                   </select></td>
               </tr>
               <tr>
