https://test.kuali.org/jira/browse/KRAFUNC-196
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6743 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -111,9 +111,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
         <!-- TAB -->
           <div class="tab-container" align="center" id="G02" style="display: none;">
-            <div class="h2-container"> <span class="subhead-left">
-              <h2> Cost Sharing Distrbution List</h2>
-            </span> </div>
+            <div class="h2-container">
+              <h2><span class="subhead-left">Cost Sharing Distrbution List</span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+            </div>
             <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col" >&nbsp; </th>
@@ -173,9 +174,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="right"> &nbsp;$0.00</div></td>
               </tr>
             </table>
-            <div class="h2-container"> <span class="subhead-left">
-              <h2> Cost Sharing Summary</h2>
-            </span> </div>
+            <div class="h2-container">
+              <h2><span class="subhead-left">Cost Sharing Summary</span ><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+             
+            </div>
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=row><div align="right">Budget Change: 07/05/2008 - 06/19/2009:</div></th>
@@ -191,7 +193,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
             </table>
             <a href="#"><br>
-            </a> </div>
+          </a> </div>
         <table cellpadding="0" cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Unrecovered
@@ -202,10 +204,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
         <div class="tab-container" align="center" id="G125" style="display: none;">
-            <div class="h2-container"> <span class="subhead-left">
-              <h2> Unrecovered F&amp;A Distrbution List</h2>
-            </span> </div>
-          <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
+            <div class="h2-container">
+              <h2><span class="subhead-left">Unrecovered F&amp;A Distrbution List</span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+         
+            </div>
+            <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col">&nbsp;</th>
                 <th scope="col"><label for="fiscal year">Fiscal Year</label></th>
@@ -257,9 +261,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align="right">$0.00 </div></td>
               </tr>
             </table>
-          <div class="h2-container"> <span class="subhead-left">
-              <h2> Unrecovered F&amp;A Summary</h2>
-          </span> </div>
+          <div class="h2-container">
+            <h2><span class="subhead-left">Unrecovered F&amp;A Summary</span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+          </div>
           <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="row"> <div align="right"> Budget Change: 07/05/2008 - 06/19/2009:</div></th>
@@ -286,11 +291,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
         <div class="tab-container" align="center" id="G03" style="display: none;">
-            <div class="h2-container"> <span class="subhead-left">
-              <h2> Income Details</h2>
-            </span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
-                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span> </div>
-          <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
+            <div class="h2-container">
+              <h2><span class="subhead-left">Income Details</span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+            </div>
+            <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col">&nbsp; </th>
                 <th scope="col"> <label for="period"> Period</label></th>
@@ -354,9 +359,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                     vspace="3" border="0"></a></div></td>
               </tr>
             </table>
-          <div class="h2-container"> <span class="subhead-left">
-              <h2> Income Summary</h2>
-          </span> </div>
+          <div class="h2-container">
+            <h2><span class="subhead-left">Income Summary</span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
+          </div>
           <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="row"> <div align="right"> Budget Change: 07/05/2008 - 06/19/2009:</div></th>
