--- a/kra-awa-dev/abud-personnel.html
+++ b/kra-awa-dev/abud-personnel.html
@@ -242,7 +242,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </table>
             <div class="tab-container" align=center id="G02" style="display: none;">
               <div class="h2-container">
-                <h2><span class="subhead-left">Budget Overview (Period 1)</span></h2>
+                <h2><span class="subhead-left">Budget Overview (Period 1)</span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></h2>
               </div>
               <table cellpadding=0 cellspacing=0 summary="view/edit ad hoc recipients">
                 <tr>
@@ -366,7 +366,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <br>
               <div class="h2-container"><span class="left">
                 <h2><a href="#" id="A899" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F899"></a> Faculty Salaries Tenured - On/AY</h2>
-                </span><span class="subhead-right"> <img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle></span></div>
+                </span><span class="subhead-right"> <img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle> <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
               <table width="100%" cellpadding=0 cellspacing=0 summary="Add Personnel Budget Items">
                 <tbody id="G899" style="display: none;">
                   <tr>
@@ -528,7 +528,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </table>
               <div class="h2-container"><span class="subhead-left">
                 <h2><a href="#" id="A373" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F373"></a> Summer Faculty - On/June</h2>
-                </span><span class="subhead-right"> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle></a></span></div>
+                </span><span class="subhead-right"> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
               <table width="100%" cellpadding=0 cellspacing=0 summary="Add Personnel Budget Items">
                 <tbody id="G373" style="display: none;">
                   <tr>
@@ -784,7 +784,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </table>
               <div class="h2-container"><span class="subhead-left">
                 <h2><a href="#" id="A272" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F272"></a> Program Manager</h2>
-                </span><span class="subhead-right"> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle></a></span></div>
+                </span><span class="subhead-right"> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 border=0 align=absmiddle> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
               <table width="100%" cellpadding=0 cellspacing=0 summary="Add Personnel Budget Items">
                 <tbody id="G272" style="display: none;">
                   <tr>
