--- a/kra-awa-dev/aw-contacts.html
+++ b/kra-awa-dev/aw-contacts.html
@@ -115,7 +115,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div style="clear:both"></div>
           <table cellpadding=0 cellspacing="0" summary="">
             <tr>
-              <td colspan="7" class="subhead" scope="row"><a href="#" id="A909" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="F909"></a> Key Personnel</td>
+              <td colspan="7" class="subhead" scope="row"><span class="subhead-left"><a href="#" id="A909" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="F909"></a> Key Personnel</span> <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span></td>
             </tr>
             <tbody id="G909">
               <tr>
