--- a/kra-awa-dev/abud-summary.html
+++ b/kra-awa-dev/abud-summary.html
@@ -110,7 +110,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           
             <table  cellpadding="0" cellspacing="0">
                 <tr>
-                	<td colspan="9" class="subhead"><span class="subhead-left">Summary</span></td>
+                	<td colspan="9" class="subhead"><span class="subhead-left">Summary</span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></td>
                 </tr>
                 <tr>
                     <td colspan="3" rowspan="2" class="infoline">&nbsp;</td>
