https://test.kuali.org/jira/browse/KRAFUNC-203
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6747 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-disclosure.html
+++ b/kra-coi-bfn/coi-disclosure.html
@@ -765,7 +765,43 @@ Entity Name 3<br>
               </tbody>
              
             </table>
-        
+           <br>
+            <table cellpadding=0 cellspacing=0 summary="">
+              <tr>
+                <td colspan="2" nowrap class="subhead">Financial Interest Reports</td>
+              </tr>
+              <tr>
+                <td width="50" nowrap class="tab-subhead1"><a href="#" id="A11w2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11w2"></a></td>
+                <td class="tab-subhead1">   General Motors Corp.</td>
+              </tr>
+              <tbody id="G11w2" style="display: none;">
+                <tr>
+                  <td align=left  style="padding:0px; border:none">&nbsp;</td>
+                  <td align=left  style="padding:0px; border:none">&quot;Financial Interest Reports hide/show list should show questionnaires&quot;</td>
+                </tr>
+              </tbody>
+              <tr>
+                <td nowrap class="tab-subhead1"><a href="#" id="A12w2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F12w2"></a></td>
+                <td class="tab-subhead1">IBM</td>
+              </tr>
+              <tbody id="G12w2" style="display: none;">
+                <tr>
+                  <td align=left  style="padding:0px; border:none">&nbsp;</td>
+                  <td align=left  style="padding:0px; border:none">&quot;Financial Interest Reports hide/show list should show questionnaires&quot;</td>
+                </tr>
+              </tbody>
+              <tr>
+                <td nowrap class="tab-subhead1"><a href="#" id="A13w2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F13w2"></a></td>
+                <td class="tab-subhead1">Resource Forge LLC</td>
+              </tr>
+              <tbody id="G13w2" style="display: none;">
+                <tr>
+                  <td align=left  style="padding:0px; border:none">&nbsp;</td>
+                  <td align=left  style="padding:0px; border:none">&quot;Financial Interest Reports hide/show list should show questionnaires&quot;</td>
+                </tr>
+              </tbody>
+            </table>
+            <p>&nbsp;</p>
           </div>
 
 <!-- Notes and Attachments -->   
